syntax = "proto3";

import "google/protobuf/empty.proto";

package tracker;

message SubscribedChannel {
  int64 channelId = 1;
  string name = 2;
}

message GetChannelsResponse {
  repeated SubscribedChannel channels = 1;
}

message SubscribeChannelRequest {
  optional string joinHash = 1;
  optional string username = 2;
}

service Tracker {
  rpc GetChannels(google.protobuf.Empty) returns (GetChannelsResponse);
  rpc SubscribeChannel(SubscribeChannelRequest) returns (SubscribedChannel);
}